// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Summary Chart Metrics Modal should disable checkboxes when max selected 1`] = `
<Modal
  onClose={[MockFunction]}
  open={true}
>
  <WindowEvent
    event="keydown"
    handler={[Function]}
  />
  <Panel>
    <Panel.Section>
      <h5>
        Select up to 5 metrics
      </h5>
      <div>
        <div
          className="Metric"
          key="count_accepted"
        >
          <Tooltip
            bottom={true}
            content="Messages an ISP or other remote domain accepted (less Out-of-Band Bounces)."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={false}
              disabled={true}
              id="count_accepted"
              label="Accepted"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
        <div
          className="Metric"
          key="count_injected"
        >
          <Tooltip
            bottom={true}
            content="Messages either injected to or received by SparkPost."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={true}
              disabled={false}
              id="count_injected"
              label="Injected"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
        <div
          className="Metric"
          key="count_sent"
        >
          <Tooltip
            bottom={true}
            content="Messages that SparkPost attempted to deliver, which includes both Deliveries and In-Band Bounces."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={false}
              disabled={true}
              id="count_sent"
              label="Sent"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
        <div
          className="Metric"
          key="count_targeted"
        >
          <Tooltip
            bottom={true}
            content="Messages successfully injected into SparkPost as well as rejected by it."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={true}
              disabled={false}
              id="count_targeted"
              label="Targeted"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
      </div>
    </Panel.Section>
    <Panel.Section>
      <Button
        className="Apply"
        disabled={false}
        onClick={[Function]}
        primary={true}
        size="default"
      >
        Apply Metrics
      </Button>
      <Button
        className="Cancel"
        onClick={[MockFunction]}
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</Modal>
`;

exports[`Component: Summary Chart Metrics Modal should render 1`] = `
<Modal
  onClose={[MockFunction]}
  open={true}
>
  <WindowEvent
    event="keydown"
    handler={[Function]}
  />
  <Panel>
    <Panel.Section>
      <h5>
        Select up to 5 metrics
      </h5>
      <div>
        <div
          className="Metric"
          key="count_accepted"
        >
          <Tooltip
            bottom={true}
            content="Messages an ISP or other remote domain accepted (less Out-of-Band Bounces)."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={false}
              disabled={false}
              id="count_accepted"
              label="Accepted"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
        <div
          className="Metric"
          key="count_injected"
        >
          <Tooltip
            bottom={true}
            content="Messages either injected to or received by SparkPost."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={false}
              disabled={false}
              id="count_injected"
              label="Injected"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
        <div
          className="Metric"
          key="count_sent"
        >
          <Tooltip
            bottom={true}
            content="Messages that SparkPost attempted to deliver, which includes both Deliveries and In-Band Bounces."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={false}
              disabled={false}
              id="count_sent"
              label="Sent"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
        <div
          className="Metric"
          key="count_targeted"
        >
          <Tooltip
            bottom={true}
            content="Messages successfully injected into SparkPost as well as rejected by it."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={false}
              disabled={false}
              id="count_targeted"
              label="Targeted"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
      </div>
    </Panel.Section>
    <Panel.Section>
      <Button
        className="Apply"
        disabled={true}
        onClick={[Function]}
        primary={true}
        size="default"
      >
        Apply Metrics
      </Button>
      <Button
        className="Cancel"
        onClick={[MockFunction]}
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</Modal>
`;

exports[`Component: Summary Chart Metrics Modal should select metrics 1`] = `
<Modal
  onClose={[MockFunction]}
  open={true}
>
  <WindowEvent
    event="keydown"
    handler={[Function]}
  />
  <Panel>
    <Panel.Section>
      <h5>
        Select up to 5 metrics
      </h5>
      <div>
        <div
          className="Metric"
          key="count_accepted"
        >
          <Tooltip
            bottom={true}
            content="Messages an ISP or other remote domain accepted (less Out-of-Band Bounces)."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={false}
              disabled={false}
              id="count_accepted"
              label="Accepted"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
        <div
          className="Metric"
          key="count_injected"
        >
          <Tooltip
            bottom={true}
            content="Messages either injected to or received by SparkPost."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={true}
              disabled={false}
              id="count_injected"
              label="Injected"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
        <div
          className="Metric"
          key="count_sent"
        >
          <Tooltip
            bottom={true}
            content="Messages that SparkPost attempted to deliver, which includes both Deliveries and In-Band Bounces."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={false}
              disabled={false}
              id="count_sent"
              label="Sent"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
        <div
          className="Metric"
          key="count_targeted"
        >
          <Tooltip
            bottom={true}
            content="Messages successfully injected into SparkPost as well as rejected by it."
            dark={true}
            forcePosition={false}
            horizontalOffset="0px"
            preferredDirection={
              Object {
                "bottom": true,
                "left": false,
                "right": true,
                "top": false,
              }
            }
            right={true}
          >
            <Checkbox
              checked={true}
              disabled={false}
              id="count_targeted"
              label="Targeted"
              onChange={[Function]}
            />
          </Tooltip>
        </div>
      </div>
    </Panel.Section>
    <Panel.Section>
      <Button
        className="Apply"
        disabled={false}
        onClick={[Function]}
        primary={true}
        size="default"
      >
        Apply Metrics
      </Button>
      <Button
        className="Cancel"
        onClick={[MockFunction]}
        size="default"
      >
        Cancel
      </Button>
    </Panel.Section>
  </Panel>
</Modal>
`;
